add_executable(demo-microchaos demo-microchaos.cpp microchaos.cpp microchaos.h)
add_executable(demo-duffing    demo-duffing.cpp duffing.cpp duffing.h)
add_executable(demo-ikeda      demo-ikeda.cpp ikeda.cpp ikeda.h)
add_executable(demo-lorenz     demo-lorenz.cpp lorenz.cpp lorenz.h)
add_executable(demo-rolling    demo-rolling.cpp rolling.cpp rolling.h)
add_executable(demo-limit      jerk_saturated_acc.cpp jerk_saturated_acc.h)
add_executable(demo-pendulum   demo-pendulum.cpp pendulum.cpp pendulum.h)
add_executable(demo-clustered  demo-clustered.cpp microchaos.cpp microchaos.h)
add_executable(demo-rotation   demo-rotation.cpp)
add_executable(demo-colouring  demo-microchaos-colouring.cpp microchaos.cpp microchaos.h)
add_executable(demo-microchaos-bif  demo-microchaos-bif.cpp microchaos.cpp microchaos.h)

target_link_libraries(demo-microchaos LINK_PUBLIC cm)
target_link_libraries(demo-duffing    LINK_PUBLIC cm)
target_link_libraries(demo-ikeda      LINK_PUBLIC cm)
target_link_libraries(demo-lorenz     LINK_PUBLIC cm gnuplot_i)
target_link_libraries(demo-rolling     LINK_PUBLIC cm gnuplot_i)
target_link_libraries(demo-limit      LINK_PUBLIC cm gnuplot_i)
target_link_libraries(demo-pendulum   LINK_PUBLIC cm)
target_link_libraries(demo-clustered  LINK_PUBLIC cm)
target_link_libraries(demo-rotation   LINK_PUBLIC cm)
target_link_libraries(demo-colouring LINK_PUBLIC cm)
target_link_libraries(demo-microchaos-bif LINK_PUBLIC cm)

find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(demo-microchaos PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(demo-duffing    PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(demo-ikeda      PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(demo-lorenz     PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(demo-rolling     PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(demo-limit     PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(demo-pendulum   PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(demo-clustered  PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(demo-rotation   PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(demo-colouring   PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(demo-microchaos-bif   PUBLIC OpenMP::OpenMP_CXX)
endif()

add_custom_target(all-demos)
add_dependencies(all-demos demo-microchaos demo-duffing demo-ikeda demo-lorenz demo-rolling demo-limit demo-pendulum demo-clustered demo-rotation demo-colouring)

